dynamically populate page, make popups dynamic

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,498 +4,7 @@
     <a href="#clubs-panel" class="mdl-tabs__tab">Clubs</a>
     <a href="#theaters-panel" class="mdl-tabs__tab">Theaters</a>
   </div>
-  <div class="mdl-grid mdl-tabs__panel" id="theaters-panel">
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/1dfcd0_99fa24fe17a841639fc1b026aa5a0233~mv2.jpg)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">Belasco</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Downtown</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Theater</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 1500</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/1dfcd0_4256ba903fcc49c1afee86eda9e98e0e~mv2.png)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">El Rey Theatre</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Miracle Mile</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Theater</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 800</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="mdl-grid mdl-tabs__panel" id="clubs-panel">
-    <div
-    class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/4a16bb_5aca68be651340948986b5da2356db6c~mv2.jpg)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">Academy</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Hollywood</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 1400</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/4a16bb_5aca68be651340948986b5da2356db6c~mv2.jpg)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">The Novo</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Downtown</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 2400</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/4a16bb_28affb29664c4d1f847bedf8829e35cb~mv2.jpg)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">Troubadour</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">West Hollywood</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 400</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/4a16bb_74f97e0229fe4d40868c5a2ce43f2fc6~mv2.jpeg)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">1OAK LA</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Hollywood</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 550</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/4a16bb_ac9383af930b4cc7a4f7e549ccd25a20~mv2.png)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">EXCHANGE LA</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Downtown</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 1500</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/1dfcd0_1fb8133063de4283888508594fb3b680~mv2.png)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">The Argyle</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Hollywood</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 500</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="mdl-grid mdl-tabs__panel is-active" id="all-panel">
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/1dfcd0_99fa24fe17a841639fc1b026aa5a0233~mv2.jpg)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">Belasco</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Downtown</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Theater</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 1500</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/4a16bb_5aca68be651340948986b5da2356db6c~mv2.jpg)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">Academy</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Hollywood</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 1400</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/4a16bb_5aca68be651340948986b5da2356db6c~mv2.jpg)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">The Novo</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Downtown</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 2400</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/4a16bb_28affb29664c4d1f847bedf8829e35cb~mv2.jpg)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">Troubadour</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">West Hollywood</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 400</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/4a16bb_74f97e0229fe4d40868c5a2ce43f2fc6~mv2.jpeg)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">1OAK LA</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Hollywood</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 550</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/1dfcd0_4256ba903fcc49c1afee86eda9e98e0e~mv2.png)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">El Rey Theatre</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Miracle Mile</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Theater</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 800</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/4a16bb_ac9383af930b4cc7a4f7e549ccd25a20~mv2.png)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">EXCHANGE LA</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Downtown</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 1500</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-    <div
-      class="demo-card-square mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-card mdl-shadow--2dp">
-      <div
-        style="background-image: url(https://static.wixstatic.com/media/1dfcd0_1fb8133063de4283888508594fb3b680~mv2.png)"
-        class="mdl-card__title mdl-card--expand"
-        style="background">
-        <div class="md-title-wrapper mdl-card__actions">
-          <span class="mdl-card__title-text">The Argyle</span>
-        </div>
-      </div>
-      <div class="mdl-card__supporting-text">
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Los Angeles</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Hollywood</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Club</span>
-        </span>
-        <span class="mdl-chip">
-          <span class="mdl-chip__text">Cap 500</span>
-        </span>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect openPopup">
-          More Info
-        </a>
-      </div>
-    </div>
-  </div>
+  <div class="mdl-grid mdl-tabs__panel is-active" id="all-panel"></div>
+  <div class="mdl-grid mdl-tabs__panel" id="clubs-panel"></div>
+  <div class="mdl-grid mdl-tabs__panel" id="theaters-panel"></div>
 </main>
