--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -107,13 +107,16 @@
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Saved Venues</a>
           <a class="mdl-navigation__link mdl-navigation__link-active" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">location_city</i>Los Angeles</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">location_city</i>New York</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">location_city</i>Paris</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">location_city</i>London</a>
           <div class="mdl-layout-spacer"></div>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
         </nav>
       </div>
       {{{body}}}
     </div>
+    <script>
+      window._venues = {{{context}}};
+    </script>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="/javascripts/vendors.js"></script>
     <script src="/javascripts/index.js"></script>
