--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -104,7 +104,7 @@
           </div>
         </header>
         <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Saved Venues</a>
+          <a id="share-venues" class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Share Venues</a>
           <a class="mdl-navigation__link mdl-navigation__link-active" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">location_city</i>Los Angeles</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">location_city</i>New York</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">location_city</i>London</a>
