--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<main class="mdl-layout__content mdl-color--grey-100 mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
+<main id="cardsContainer" class="mdl-layout__content mdl-color--grey-100 mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
   <div class="mdl-tabs__tab-bar">
     <a href="#all-panel" class="mdl-tabs__tab is-active">All Venues</a>
     <a href="#clubs-panel" class="mdl-tabs__tab">Clubs</a>
